@@ -31,6 +31,7 @@ namespace Mono.Cecil {
 	public enum TargetRuntime {
 		NET_1_0,
 		NET_1_1,
-		NET_2_0
+		NET_2_0,
+		NET_4_0,
 	}
 }
